# serial-blue-terminal

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: CPack.SerialBlueTermDescription.txt  CPack.SerialBlueTermWelcome.txt  CPackDebConfig.cmake  CPackNsisConfig.cmake  CPackRpmConfig.cmake  SerialBlueTermCPackConfig.cmake
doc/: CMakeLists.txt  conf.py.in  index.rst  packaging.md  userguide.rst
lib/: CMakeLists.txt  sbTermConsole.cpp  sbTermConsole.h  sbTermExports.h  sbTermMainWindow.cpp  sbTermMainWindow.h  sbTermPortSettings.h  sbTermSettings.h  sbTermSettingsController.cpp  sbTermSettingsController.h
ressources/: sbterm.qrc
